--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,8 +42,8 @@ header .container{
 }
 
 .logo{
-  width: 105px;
-  height:30px;
+  width: 40px;
+  height:40px;
   position: relative;
   float: left;
   margin: 10px 0 0 0;
@@ -264,7 +264,7 @@ div #todos-los-campeones{
   height: 100%;
 }
 
-.end p{
+/*.end p{
   text-align: center;
   font-family: 'Sorts Mill Goudy', serif;
   font-size: 25px;
@@ -273,17 +273,29 @@ div #todos-los-campeones{
   
 }
 
-
 /************ESTILO DEL FOOTER*****************/
 footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  color: rgb(128, 128, 128);
-  font-size: 0.7em;
   padding: 0.5rem;
-  background-color: rgb(217, 217, 217);
+  background-color: rgb(201, 27, 27);
   margin-bottom: 0;
   margin-top: 3rem;
+  z-index: 100;
+}
+
+footer p{
+  font-family: 'Sorts Mill Goudy', serif;
+  text-align: center;
+  color: rgb(121, 121, 121);
+  font-size: 12px;
+  
+}
+
+footer img {
+  max-width: 70px;
+  max-height:30px; 
+  margin: 3%;
 }
 
