--- a/src/css/fontello.css
+++ b/src/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?84408921');
-  src: url('../font/fontello.eot?84408921#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?84408921') format('woff2'),
-       url('../font/fontello.woff?84408921') format('woff'),
-       url('../font/fontello.ttf?84408921') format('truetype'),
-       url('../font/fontello.svg?84408921#fontello') format('svg');
+  src: url('../font/fontello.eot?36304320');
+  src: url('../font/fontello.eot?36304320#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?36304320') format('woff2'),
+       url('../font/fontello.woff?36304320') format('woff'),
+       url('../font/fontello.ttf?36304320') format('truetype'),
+       url('../font/fontello.svg?36304320#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?84408921#fontello') format('svg');
+    src: url('../font/fontello.svg?36304320#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,7 @@
 }
  
 .icon-globe:before { content: '\e800'; } /* '' */
+.icon-menu:before { content: '\e801'; } /* '' */
 .icon-magic:before { content: '\f0d0'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
 .icon-gitlab:before { content: '\f296'; } /* '' */
