--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,12 +121,13 @@ header label{
 
 #banner h1{
   font-size: 20px;
-  width: 90%;
+  width: 80%;
   float: left;
-  padding: 10px;
-  font-family: 'Sorts Mill Goudy', serif;
-  font-weight: 500;
-  text-shadow:3px 3px 10px black;
+  padding: 15px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  text-shadow: 15px 15px 50px rgb(0, 1, 2);
+  letter-spacing: 2px;
 }
 
 #banner a{
@@ -138,14 +139,17 @@ header label{
   margin-left: 10px;
   color:rgb(233, 233, 233);
   text-decoration: none;
-  background-color: rgb(189, 189, 189, 0.2);
-  border: 1px solid rgb(233, 233, 233, 0.5);
+  background-color: rgba(0, 0, 0, 0.712);
+  border: 1px solid rgba(0, 0, 15, 0.966);
   font-family: 'Sorts Mill Goudy', serif;
+  font-weight: 200;
+  border-radius: 5px;
 }
 
 #banner a:hover{
-  background:rgba(23, 50, 136, 0.8);
-  color:rgb(233, 233, 233); 
+  background:rgb(0, 0, 0);
+  color:rgb(160, 141, 56); 
+  font-weight: 700;
 }
 
 /*********************************CAMPEONES*****************************/
@@ -209,7 +213,7 @@ header label{
 
 .elemento{
   flex-basis: 200px;
-  height: 400px;
+  height: 390px;
 
   margin: 5px;
   text-align: center;
@@ -248,29 +252,39 @@ div #todos-los-campeones{
   cursor: pointer;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
 }
-
-.video-container{
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px; height: 0;
-  
-  }
     
-.video-container iframe{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
-/*.end p{
+.end{
   text-align: center;
   font-family: 'Sorts Mill Goudy', serif;
   font-size: 25px;
   color:rgb(238, 240, 235);
   padding: 10px;
+  justify-content: center;
   
+}
+
+iframe{
+  display: block;
+  margin: auto;
+  align-content: center;
+}
+
+
+#scrollToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 10px;
+  border: none;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(231, 181, 73);
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 60px;
 }
 
 /************ESTILO DEL FOOTER*****************/
@@ -279,23 +293,57 @@ footer {
   flex-wrap: wrap;
   justify-content: center;
   padding: 0.5rem;
-  background-color: rgb(201, 27, 27);
+  background-color: rgb(0, 0, 0);
   margin-bottom: 0;
   margin-top: 3rem;
+  left: 0;
   z-index: 100;
+  max-width: 100%;
+  max-height:50%; 
 }
 
 footer p{
   font-family: 'Sorts Mill Goudy', serif;
   text-align: center;
   color: rgb(121, 121, 121);
-  font-size: 12px;
-  
+  font-size: 13px;
+  padding: 10px;
+}
+
+#logo-en-footer{
+  margin: auto;
+  justify-content: center;
+
 }
 
 footer img {
   max-width: 70px;
   max-height:30px; 
-  margin: 3%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3px;
+}
+
+footer #redes-en-footer{
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  color: aliceblue;
+}
+footer #logo-en-footer{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+
+}
+
+footer a{
+  color: aliceblue;
+  text-decoration: none;
+}
+
+a + a{
+  margin-left: 15px;
 }
 
