Mejoras al archivo data.js, revisión de metodos map y filter / Se agrega metodo Object.assign

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,6 +285,7 @@ iframe{
   cursor: pointer;
   padding: 15px;
   border-radius: 60px;
+  border-color: #664100
 }
 
 /************ESTILO DEL FOOTER*****************/
