--- a/src/css/style.css
+++ b/src/css/style.css
@@ -288,7 +288,7 @@ iframe{
   max-height: 410px;
 }
 
-#roles-titulo{
+.roles-titulo{
   text-align: center;
   font-family: 'Sorts Mill Goudy', serif;
   font-size: 28px;
@@ -371,4 +371,8 @@ footer a{
 
 a + a{
   margin-left: 15px;
+}
+
+#titulo-campeones-por-rol{
+  color: aquamarine;
 }
