--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,14 +232,14 @@ label .nivel-en-numero{
   color: rgb(29, 29, 29);
 }
 
-div #todos-los-campeones{
+div .todos-los-campeones{
   display: block;
   margin: auto;
   align-content: center;
 }
 
 /************BOTON TODOS LOS CAMPEONES: Lleva a la segunda historia*****************/
-#todos-los-campeones{
+.todos-los-campeones{
   background: #ffd56b;
   background-image: -webkit-linear-gradient(top, #ffd56b, #664100);
   background-image: linear-gradient(to bottom, #ffd56b, #664100);
@@ -250,9 +250,10 @@ div #todos-los-campeones{
   font-weight: 600;
   padding: 10px 10px 10px 10px;
   text-decoration: none;
+  display: block;
 }
   
-#todos-los-campeones:hover {
+.todos-los-campeones:hover {
   cursor: pointer;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
 }
@@ -313,20 +314,55 @@ iframe{
   border-color: #664100
 }
 
-/*
-ESTILOS DE LA TERCERA HISTORIA
+/*ESTILOS DE LA TERCERA HISTORIA*/
 .elemento-avatar{
-  flex-basis: 100px;
-  max-height: 420px;
-  display: block;
+  flex-wrap: wrap;
+  width: 250px;
+  height: 70px;
   margin: 10px;
   text-align: center;
   align-content: center;
-  border: 5px double rgb(185, 185, 185);
+  border: 5px double rgb(238, 198, 98);
   border-radius: 3px;
   background-color: rgba(248, 224, 196, 0.9);
 }
-*/
+
+.elemento-avatar .avatar-div{
+  width: 30%;
+  height: 70px;
+  float: left;
+}
+
+.elemento-avatar .text-div{
+  width: 70%;
+  height: 70px;
+  float: right;
+}
+
+.avatar{
+  top:10px;
+  bottom: 5px;
+  width: 58px;
+  height: 58px;
+}
+
+div .nombre-en-rol{
+  font-size: 25px;
+  margin: 0px;
+}
+
+.elemento-avatar .titulo-en-rol{
+  font-size: 15px;
+}
+
+#todos-los-campeones-por-rol{
+  display: block;
+  margin: auto;
+}
+
+
+
+
 /************ESTILO DEL FOOTER*****************/
 footer {
   display: flex;
