Se aplica correción del html en clases por sugerencia coach

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -387,7 +387,7 @@ div #card-avatar{
   align-content: center;
 }
 
-.botónPequeño{
+.boton-pequeño{
   font-size: 14px;
   font-weight: 400;
   padding: 5px 5px 5px 5px;
